--- a/views/question_add.haml
+++ b/views/question_add.haml
@@ -28,7 +28,7 @@
           = 'Choice 4: '
           %input{:type=>'text', :name=>'choice4'}
         .row
-          %input{:type=>'submit'}
+          %input{:type=>'submit', :value=>'Submit Question'}
     %a{:href=>'/questions'}
       = 'View all questions'
     = haml :footer
