--- a/public/css/style.css
+++ b/public/css/style.css
@@ -56,6 +56,7 @@ div#register { width:500px; text-align:right; }
 div#login { width:400px; }
 div#question { width:700px; }
 div#questionadd { width:500px; }
+div#commentadd { width:500px; }
 div#questionanswer { width:500px; }
 div#profile { width: 500px; }
 div.loginBox {
