--- a/views/comment_add.haml
+++ b/views/comment_add.haml
@@ -2,10 +2,13 @@
 %html{:xmlns => "http://www.w3.org/1999/xhtml", "xml:lang" => "en", :lang => "en"}
   %head
     %meta{'http-equiv' => 'Content-Type', :content => 'content="text/html; charset=utf-8;'}
-    %link{:rel => "stylesheet", :type => "text/css", :href => "styles.css"}
+    %link{:rel => "stylesheet", :type => "text/css", :href => "/css/style.css"}
     %title="DiversIT: Add Comment"
   %body
+    = haml :header
     = 'Add a Comment:<br />'
-    %form{:action=>'/comment/'+params[:qid]+'/'+params[:rid], :method=>'POST'}
-      %input{:type=>'text', :name=>'comment'}
-      %input{:type=>'submit'}
+    .container{:id => 'commentadd'}
+      %form{:action=>'/comment/'+params[:qid]+'/'+params[:rid], :method=>'POST'}
+        %input{:type=>'text', :name=>'comment'}
+        %input{:type=>'submit', :value=>'Submit Comment'}
+    = haml :footer
