--- a/views/question_archive.haml
+++ b/views/question_archive.haml
@@ -12,7 +12,7 @@
         %a{:href=>'question/'+question.id.to_s}
           = question.body.to_s
           %br
-          = "&nbsp;&nbsp;&nbsp;&nbsp;"+question.timestamp.to_s
+          = "&nbsp;&nbsp;&nbsp;&nbsp;"+question.timestamp.to_s[0..9]
           %br
           %br
 
