--- a/views/comment_add.haml
+++ b/views/comment_add.haml
@@ -9,6 +9,8 @@
     = 'Add a Comment:<br />'
     .container{:id => 'commentadd'}
       %form{:action=>'/comment/'+params[:qid]+'/'+params[:rid], :method=>'POST'}
-        %input{:type=>'text', :name=>'comment'}
-        %input{:type=>'submit', :value=>'Submit Comment'}
+        .row
+          %input{:type=>'text', :name=>'comment'}
+        .row
+          %input{:type=>'submit', :value=>'Submit Comment'}
     = haml :footer
