--- a/public/css/style.css
+++ b/public/css/style.css
@@ -14,6 +14,7 @@ a {
   color:#ffffff;
   text-shadow: 0px 0px 5px #202020;
   text-decoration:none;
+  outline: 0;
 }
 
 #title { font-size:5.0em; }
